[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Nature Algorithms"
version = "0.0.7"
authors = [
  { name="Carlos Oviedo", email="ovicorps@gmail.com" },
]
description = "Nature Algorithms"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: BSD-2",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""

